api 1.7 new events (#11)
* added new FullscreenEvents